<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

  <string name="applicationName">LeelahSystem</string>
  <string name="applicationDescription"></string>

  <string name="problem">Problem</string>
  <string name="unhandledProblem">You have unveiled a bug in the application, and we are sorry for that!\n\nWould you be kind enough to report that problem to us? Thank you.</string>
  <string name="dialogButton_unhandledProblem">Send</string>
  <string name="progressDialogMessage_unhandledProblem">Retrieving and computing the application log...</string>
  <string name="unavailableService">Unavailable service: sorry, the current activity cannot resume.\n\nHave you checked you Internet connection?\n\nPlease, press \"OK\".</string>
  <string name="connectivityProblem">Your terminal is not currently connected to Internet, or your connection is very poor.\n\nPlease, check your connection and try again.</string>
  <string name="connectivityProblemRetry">Your terminal is not currently connected to Internet, or your connection is very poor.\n\nDo you want to try again?</string>
  <string name="unavailableItem">Cannot retrieve the element properly: sorry, the current activity cannot resume.\n\nPlease, press \"OK\"</string>
  <string name="loading">Chargement...</string>

  <string name="LeelahSystemSplashScreen_dialogMessage_noSdCard">No SD card is currently mounted/available on the device: the application cannot start!</string>
  <string name="LeelahSystemSplashScreen_smartnsoftMoto">MOBILE APPLICATIONS CREATION</string>

  <string name="Settings_version">Version</string>

  <string name="Main_menu_settings">Settings</string>
  <string name="Main_menu_about">About</string>
  
  <string name="Menu_admin_mode">Mode administrateur</string>
  <string name="Menu_settings">Paramètres</string>
  <string name="Menu_call_server">Appeler un serveur</string>
  <string name="Menu_empty_cart">Vider le caddie</string>
  
  <string name="Product_add_to_cart">Ajouter au panier</string>

  <string name="Login_default_server_address">leelah-system.com:3000</string>
  <string name="Login_user_hint">Utilisateur</string>
  <string name="Login_password_hint">Mot de passe</string>
  <string name="Login_connect_button">Valider</string>
  
  <string name="Cart_command_button">Commander</string>
  <string name="Cart_total_price">Total:</string>  
  <string name="Cart_empty_cart_dialog_title">Vider le panier ?</string>
  <string name="Cart_empty_cart_dialog_message">Voulez vous effacer le contenus de votre panier ?</string>
  
  <string name="Price_euro">%1$s €</string>
  
  <string name="Category_all_categories">Tous les produits</string>
  
  <string name="Product_request_order">Requete client (ingrédients, autres demandes...)</string>
  <string name="Product_in_stock">En stock</string>
  <string name="Product_not_in_stock">Indisponible</string>
  <string name="Product_update_cart">Mettre à jour</string>
  
  <string name="Service_error_title">Service Error !</string>
  
  <string name="add_user_firstname">Prénom</string>
  <string name="add_user_lastname">Nom</string>
  <string name="add_user_username">Identifiant</string>
  <string name="add_user_password">Mot de passe</string>
  <string name="add_user_email">Adresse Email</string>
  <string name="add_user_error">Veuillez remplir ce champ correctement !</string>
  <string name="add_user_error_message">Erreur de création de l\'utilisateur</string>
  <string name="add_user_title">Ajout d\'un utilisateur</string>
  
  <string name="add_product_name">Nom du produit</string>
  <string name="add_product_label">Label</string>
  <string name="add_product_stock">En stock</string>
  <string name="add_product_price">Prix</string>
  <string name="add_product_description">Description</string>
  <string name="add_product_reference">Reference</string>
  <string name="add_product_error_message">Erreur de création du produit</string>
  <string name="add_product_title">Ajout d\'un produit</string>
  <string name="add_category_title">Ajout d\'une categorie</string>
  <string name="Order_orderTitle">Commande #%1$s</string>
  <string name="Order_orderItemTitle">#%1$s</string>
  <string name="Order_orderItemDetails">%1$s (%2$s)</string>
  <string name="leelah_infos">Leelah-system\n6 Rue Pasteur\nRDC, Porte A46\n91260 - Juvisy sur Orge\ncontact@leelah-system.com\nTél. 06.11.60.58.60</string>
</resources>
