<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
>
  <ImageView
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/background_restaurant"
    android:scaleType="centerCrop" 
  />
  <View
    android:id="@+id/center"
    android:layout_width="0dip"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
  />
  <LinearLayout
    android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:padding="@dimen/defaultPadding"
    android:gravity="center"
    android:background="@drawable/login_screen_gradient"
  />
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_toRightOf="@id/center"
    android:layout_alignParentRight="true"
    android:padding="@dimen/defaultPadding"
    android:gravity="center"
  >
      <ImageView 
          android:layout_width="wrap_content"
          android:layout_height="140dip"
          android:src="@drawable/logo_leelah"
          android:scaleType="centerInside"
      />
      <EditText 
          android:id="@+id/serverAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:singleLine="true"
          android:inputType="textUri"
          android:hint="@string/Login_default_server_address"
      />
      <EditText 
          android:id="@+id/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:singleLine="true"
          android:hint="@string/Login_user_hint"
      />
      <EditText 
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:singleLine="true"
          android:inputType="textPassword"
          android:hint="@string/Login_password_hint"
      />
      <Button 
          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/Login_connect_button"
      />
  </LinearLayout>
</RelativeLayout>